--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-Sock==0.7.0
 eventlet==0.33.3
+gevent==22.10.2
 gunicorn==23.0.0
 mysqlclient==2.2.6
 pymysql==1.1.1
